# todo-kafka

./: .env  .env.example  README.md  compose.yml
fapi/: .gitignore  Dockerfile.dev  pyproject.toml
fapi/app/: database.py  engine_file.py  main.py  models.py  todos_route.py
fapi/tests/: test_main.py  test_todos_route.py
